Correct word-wrapping for different display sizes, and sidebar fixes

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     height: fit-content;
     border-style: inset; 
     border-color:  dodgerblue;
+    word-wrap: break-word; /* we don't want to overflow the div! */
 }
 
 .sidebar {
@@ -38,6 +39,16 @@ body {
     border-color:  dodgerblue;
 }
 
+/* link color fix */
+a, a:visited {
+    color: dodgerblue;
+}
 img {
     max-width: 30%;
+}
+
+#sidebar ul li {
+    list-style-type: none;
+    text-indent: 0;
+    margin: 0;
 }
